Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Strings and Variables/Strings and VariablesAddedLines.html
+++ b/Strings and Variables/Strings and VariablesAddedLines.html
@@ -23,6 +23,7 @@
 	var grossPay=hours*payRate;
 	//OUTPUT RESULT
 	document.write("<p>Paycheck = $"+grossPay+"</p>");
+	document.write("<p>Paycheck = $",grossPay,"</p>");
 	</script>
 </body>
 </html>
