Update Strings and VariablesAddedLines.html
Added more comments 
Where: LINE 28
When: August 27th, 2014. @RCC 
By: Reevo17, Aaron Salcido

--- a/Strings and Variables/Strings and VariablesAddedLines.html
+++ b/Strings and Variables/Strings and VariablesAddedLines.html
@@ -24,6 +24,8 @@
 	//OUTPUT RESULT
 	document.write("<p>Paycheck = $"+grossPay+"</p>");
 	document.write("<p>Paycheck = $",grossPay,"</p>");
+	//Added Commas instead of plus signs to show that JavaScript can divide the string into three seperate parameters.
+	//JavaScript argues with itself, it is a smart language.
 	</script>
 </body>
 </html>
