Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Designing Text/Design Docuwrite test strings.html
+++ b/Designing Text/Design Docuwrite test strings.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-	<script> document.write("font color\"green\";>(Where do we start?)<\/font>");
+
+	<script> document.write(<"span style=\color:green; font-size: 2em; font-family: Arial;\">(Where do we start?)<\/span>");
+	</script>
     
 </body>
 </html>
