--- a/Designing Text/Design Docuwrite test strings.html
+++ b/Designing Text/Design Docuwrite test strings.html
@@ -7,7 +7,7 @@
 
 <body>
 
-	<script> document.write(<"span style=\color:green; font-size: 2em; font-family: Arial;\">(Where do we start?)<\/span>");
+	<script> document.write("<span style=\color:green; font-size: 2em; font-family: Arial;\">Where do we start?<\/span>");
 	</script>
     
 </body>
