Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Designing Text/Design Document.html
+++ b/Designing Text/Design Document.html
@@ -2,7 +2,7 @@
 	/*
 		Aaron C. Salcido
 		August 27th, 2014
-		Purpose: To Design the text within the webpage and add different types of Typeface to them
+		Purpose: (Not an Assignment) To Design the text within the webpage and add different types of Typeface to them
 	*/
 </script>
 <!doctype html>
@@ -16,7 +16,7 @@
 	<script type="text/javascript">
 	//The First header
 		document.write("<h1>What sort of design should we do for this page?</h1>");
-		document.write(<p style=color: green> "I guess we could make some of the text colorful"</p>);
+		document.write("<p>I guess we could make some of the text colorful</p>");
 	</script>
     	<big> <center> Well, this is small </center> </big>
 		<small> <center> And this is big...right? </center></small>
