--- a/Designing Text/Design Docuwrite test strings.html
+++ b/Designing Text/Design Docuwrite test strings.html
@@ -1,14 +1,32 @@
+<script type="text/javascript">
+	/*
+		Author: Aaron C. Salcido<br>
+		August 28th, 2014
+		Purpose: (Not an Assignment)To practise and test using design tags
+				  and comment methods in a Text-Editting Environment
+	*/
+</script>
 <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Using Design with Doc.Write</title>
 </head>
-
+	
 <body>
 
 	<script> document.write("<span style=\color:green; font-size: 2em; font-family: Arial;\">Where do we start?<\/span>");
+	/*
+	<span style> was the only tag that worked for me when using document.write
+	*/
 	</script>
+    <p>
+    //This comment method doesn't work, not sure why
+    </p>
+    <!-- For some reason using the // as a  -->
+    <!-- comment indicator isn't working... -->
+    <!-- I have resorted to using this comment instead -->
     
 </body>
+
 </html>
