Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido_Aaron_setTimeout Project.html
+++ b/Hmwrk/Assignment 1/Salcido_Aaron_setTimeout Project.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 <meta charset="utf-8">
 <title> Script Timout</title>
@@ -9,10 +10,11 @@
 	 {
 		alert("Are you going to stare at this lovely page forever?") ;
 	}
-	</script>
+</script>
 </head>
 
 <body>
 	<h1> This code was copied from the textbook</h1>
+    <p> Is it working?? Last I checked it wasn't... </p>
 </body>
 </html>
