--- a/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
@@ -12,31 +12,32 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
+</head>
+
 
 <!--- Test for jokes --->
 
 <script>
 var joke = "Javascript walked into a bar....";
-<!--- toldJoke stays false...how do we allow it to change its Bool value to true? --->
-var toldJoke = "false";
+<!--- Tried turning this into a boolean, still getting an error --->
+Boolean toldJoke = false;
+<!-- Only Booleans can be true or false...so why does it tell me that this string is an error? -->
 var $punchLine =
 	"Better watch out for those semi-colons.";
-<!--- I removed the "%" from var entage because DW was returning an error because of it. This might be causing an error, see below comment. --->
- var entage = 20;
+<!--- I removed the "%" from var entage because DW was returning an error because of it. --->
+ var $entage = 20;
  var result
  
  
  if (toldJoke == true) <!--- How do we prove this...? --->
  	{
     	Alert($punchLine) ;
-	} else  {
+<!-- Added '{' after 'else' -->
+	}else{  
  	alert(joke);
  }
  </script>
- <!--- I Added the "{" after Else because dreamweaver was telling me that the code was broken there, which fixed it <br>
- for the most part but the prompt doesn't finish the punchline because there is no way to make prove (toldJoke == true) 
- --->
-</head>
+
 
 <body>
 	There should be a joke on this page...
