--- a/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
@@ -10,6 +10,7 @@
 <!doctype html>
 <html>
 <head>
+ 
 <meta charset="utf-8">
 <title>Untitled Document</title>
 </head>
@@ -17,10 +18,10 @@
 
 <!--- Test for jokes --->
 
-<script>
+<script>1
 var joke = "Javascript walked into a bar....";
 <!--- Tried turning this into a boolean, still getting an error --->
-Boolean toldJoke = false;
+var toldJoke = false;
 <!-- Only Booleans can be true or false...so why does it tell me that this string is an error? -->
 var $punchLine =
 	"Better watch out for those semi-colons.";
