Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
@@ -20,7 +20,7 @@
 
 <script>1
 var joke = "Javascript walked into a bar....";
-<!--- Tried turning this into a boolean, still getting an error --->
+<!--- If this is a Boolean why does var work for defining it? --->
 var toldJoke = false;
 <!-- Only Booleans can be true or false...so why does it tell me that this string is an error? -->
 var $punchLine =
