--- a/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
@@ -14,10 +14,10 @@ var movieTicket$ = 9;
 
 if (movieTicket$ >= 9) 
 	{
-		alert("Too Much");
+		alert("Too Much")
 	}else{
-		alert("We're going to see" + joesFavoriteMovie) ;
-	} 
+		alert("We're going to see" + joesFavoriteMovie) 
+	}
 </script>
 
 <body>
