Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
@@ -16,7 +16,7 @@ if (movieTicket$ >= 9)
 	{
 		alert("Too Much")
 	}else{
-		alert("We're going to see" + joesFavoriteMovie) 
+		alert("We're going to see" + joesFavoriteMovie) ;
 	}
 </script>
 
