Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
@@ -3,6 +3,7 @@
 		Author: Aaron C Salcido
 		August 29th, 2014
 		Purpose: Assignment 1 CIS 14 Due August 31st
+				To use "while" in code to demonstrate value edditing and looping
 					
 	*/
 
