--- a/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
@@ -3,7 +3,7 @@
 		Author: Aaron C Salcido
 		August 29th, 2014
 		Purpose: Assignment 1 CIS 14 Due August 31st
-				To use "while" in code to demonstrate value edditing and looping
+				To use the conditional "while" in code to demonstrate value edditing and looping
 					
 	*/
 
@@ -28,5 +28,6 @@ document.write("Life without Ice Cream isn't the same");
 </script>
 
 <body>
+    <br> <br> <br> Lets hope you aren't Lactose Intalerant...
 </body>
 </html>
