Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops, While Example Assignement 1.html
@@ -20,11 +20,14 @@
 
 <script>
 var scoops=5;
+// var scoops refers to ice cream scoops
 while (scoops > 0) {
 	document.write("Another Sccoop!<br>");
 	scoops = scoops - 1;
+	//Reduces the value of scoops by 1
 }
 document.write("Life without Ice Cream isn't the same");
+//Closing statement when the conditional while ends
 </script>
 
 <body>
