Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
@@ -1,3 +1,12 @@
+<script type="text/javascript">
+	/*
+		Author: Aaron C Salcido
+		August 29st, 2014
+		Purpose: Assignment 1 Due August 31st, 2014
+				To use the "if" conditional to display alert messages
+	*/
+</script>
+
 <!doctype html>
 <html>
 <head>
@@ -6,17 +15,21 @@
 </head>
 
 <script>
-<!-- Movie night -->
+// Movie night
 var zipCode = 98104 ;<br>
-<!-- Removed the " ' " from "joes" to fix that error -->
+// Removed the " ' " from "joes" to fix that error
 var joesFavoriteMovie = Forbidden Planet;
 var movieTicket$ = 9;
+//Price of Move ticket
 
 if (movieTicket$ >= 9) 
 	{
 		alert("Too Much")
 	}else{
 		alert("We're going to see" + joesFavoriteMovie) ;
+		//I am getting an error on line 20 an I am not sure why, I have copied the code from the book directly
+		//No matter where I put the semicolon in this "if" conditional, the line that has it will return an error
+		//But when there are no semi colons on any of the lines, the error moves to line 24
 	}
 </script>
 
