--- a/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
@@ -12,35 +12,36 @@
 <head>
  
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>JavaScript Joke</title>
 </head>
 
 
-<!--- Test for jokes --->
+<!-- Test for jokes --->
 
 <script>1
 var joke = "Javascript walked into a bar....";
-<!--- If this is a Boolean why does var work for defining it? --->
 var toldJoke = false;
-<!-- Only Booleans can be true or false...so why does it tell me that this string is an error? -->
+// Although toldJoke is Boolean, var works to define it
 var $punchLine =
-	"Better watch out for those semi-colons.";
-<!--- I removed the "%" from var entage because DW was returning an error because of it. --->
+	 "Better watch out for those semi-colons.";
+// I removed the "%" from var entage because DW was returning an error because of it
  var $entage = 20;
  var result
  
  
- if (toldJoke == true) <!--- How do we prove this...? --->
+ if (toldJoke == true) //How do we prove this? If we can
  	{
     	Alert($punchLine) ;
-<!-- Added '{' after 'else' -->
+// Added '{' after 'else' 
+//
 	}else{  
- 	alert(joke);
+ 	alert(joke); //Displays the joke in a window
  }
  </script>
 
 
 <body>
-	There should be a joke on this page...
+	Thank you, thank you, Im here all week...
+    <!-- Just a little flavoring, this line serves no real purpose -->
 </body>
 </html>
