--- a/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops , if Example Assignement 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Ice Cream Scoops , if Example Assignement 1.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
 	/*
 		Author: Aaron C Salcido
-		August 29th, 2014
+		August 31st, 2014
 		Purpose: Assignment 1 CIS 14 Due August 31st
-				To use the conditional "while" in code to demonstrate value edditing and looping
+				To use the conditional "if" in code to demonstrate varied alerts
 					
 	*/
 
@@ -14,22 +14,30 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Ice Cream Scoops</title>
+<title>Ice Cream Scoops 2</title>
 </head>
 
 
 <script>
 var scoops=5;
 // var scoops refers to ice cream scoops
-while (scoops > 0) {
+if (scoops >= 5) {
+	
 	alert("Eat faster, the ice cream is going to melt!");
 }else if (scoops == 3) {
 	alert("Ice cream is running low!");
-}else if (scoops
-	document.write("Another Sccoop!<br>");
+}else if (scoops == 2) {
+	alert("Going Once!");
+}else if (scoops == 1) {
+	alert("Going twice!");
+}else if (scoops == 0) {
+	alert("Gone!");
+	} else {
+		alert("Still lost of ice cream left, come and get it.");
+	}
 	scoops = scoops - 1;
 	//Reduces the value of scoops by 1
-}
+
 document.write("Life without Ice Cream isn't the same");
 //Closing statement when the conditional while ends
 </script>
