--- a/Hmwrk/Assignment 1/Salcido_Aaron_setTimeout Project.html
+++ b/Hmwrk/Assignment 1/Salcido_Aaron_setTimeout Project.html
@@ -1,13 +1,20 @@
+<script type="text/javascript">
+	/*
+		Author: Aaron C Salcido
+		August 28th, 2014
+		Purpose: To examplify how to use the setTimeout and wakeUpUser functions
+	*/
+</script>
 <!doctype html>
 <html lang="en">
 
 <head>
 <meta charset="utf-8">
-<title> Script Timout</title>
+<title>Timout</title>
 <script>
 	setTimout (wakeUpUser, 5000) ;
-	function wakeUpUser()
-	 {
+// 5000 Miliseconds is equivalent to 5 seconds
+	function wakeUpUser() {
 		alert("Are you going to stare at this lovely page forever?") ;
 	}
 </script>
@@ -15,6 +22,5 @@
 
 <body>
 	<h1> This code was copied from the textbook</h1>
-    <p> Is it working?? Last I checked it wasn't... </p>
 </body>
 </html>
