Added New File and Small Changes. On the movie document, I added comments and cleaned up the code a little In the Joke File I made changes (See new comments for details) Added index.html, where the 99 Bottles Song is sent to the console
Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Movie Night.html
@@ -18,7 +18,8 @@
 // Movie night
 var zipCode = 98104 ;<br>
 // Removed the " ' " from "joes" to fix that error
-var joesFavoriteMovie = Forbidden Planet;
+var joesFavoriteMovie = "Forbidden Planet";
+//Added quotes
 var movieTicket$ = 9;
 //Price of Move ticket
 
