--- a/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
+++ b/Hmwrk/Assignment 1/Salcido,Aaron Test for Jokes Project Asignment 1.html
@@ -26,8 +26,8 @@ var $punchLine =
 	 "Better watch out for those semi-colons.";
 // I removed the "%" from var entage because DW was returning an error because of it
  var $entage = 20;
- var result
- 
+ var result ;
+ //Added ; 
  
  if (toldJoke == true) //How do we prove this? If we can
  	{
