--- a/ParseInt.html
+++ b/ParseInt.html
@@ -18,9 +18,10 @@
 	<script>
 		var x=prompt("Type in a number");
 		var y=prompt("Type in another number");
-		var z=parseInt(x)+parseInt(y);
+		var z=parseInt(x)+parseInt(y); //Forces the variables to be treated as an integer
 		
 		document.write("<h1>"+x+ "+" +y+ "=" +z+ "</h1>");
+		//Displays the strings that we allowed the user to input in the prompts. Then displays var z, which is to be treated as an integer, we forced it to be treated as an integer thanks to parseInt.
 	</script>
 </body>
 </html>
