Editted Paycheck Switch2 Added Paycheck Switch IF Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Paycheck Switch IF.html
+++ b/Paycheck Switch IF.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 /*	Author: Aaron C Salcido
-	September 8th,2014
-	PurposeL Investigate Branching Constructs
+	September 10th,2014
+	Purpose: To Use IF statement to create a program for Paycheck
 */
 </script>
 <!doctype html>
