--- a/Hmwrk/Assignment 2/IF TripleTime.html
+++ b/Hmwrk/Assignment 2/IF TripleTime.html
@@ -15,8 +15,7 @@
 	<script>
     	var hours = parseInt(Math.random()*20+30); //hours worked
         var payRate = 10; //Dollars per hour
-        var ovt = 20; //Amount of overtime
-		var trit = 41;
+        var ovt = 20; //Amount of overtime START
 		var payChk;
 		
 		//Ourput the inputs!
@@ -25,11 +24,9 @@
 		document.write("<h3>Over time start = "+ovt+"</h3>");
 		
 		//Determine our paycheck
-		if (hours<ovt){
-			 payChk=hours*payRate;//Added double time hours
-		} else{(hours>ovt&&hours<trit)
-			payChk=hours*payRate+(hours-ovt)*payRate;
-		}
+		if (hours<ovt) payChk=hours*payRate;//Straight time
+		if(hours>ovt&&hours<=40)  payChk=hours*payRate+(hours-ovt)*payRate;//Overtime Between 20-40hours
+		if(hours>=41) payChk=hours*payRate+(hours-ovt)*payRate+(hours-ovt)*payRate;//TRIPLE TIME
 		//Chop off some of the decimal places
 		payChk=payChk.toFixed(2);
 		//Output our Pay Check
