Updated information Signed-off-by: reevo17 <runt17@gmail.com>

--- a/In-Class/Paycheck.html
+++ b/In-Class/Paycheck.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 /*	Author: Aaron C Salcido
-	September 8th,2014
-	PurposeL Investigate Branching Constructs
+	September 17th,2014
+	Purpose: To create a Triple Time paycheck using the Switch Operator
 */
 </script>
 <!doctype html>
@@ -15,7 +15,7 @@
 	<script>
     	var hours = parseInt(Math.random()*20+30); //hours worked
         var payRate = 10; //Dollars per hour
-        var ovt = 40; //Amount of overtime
+        var ovt = 20; //Overtime Start
 		
 		//Ourput the inputs!
 		document.write("<h2>Hours worked    = "+hours+"<h2>");
