--- a/Hmwrk/Assignment 2/IF TripleTime.html
+++ b/Hmwrk/Assignment 2/IF TripleTime.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 /*	Author: Aaron C Salcido
-	September 10th,2014
-	Purpose: To Use IF statement to create a program for Paycheck
+	September 17th,2014
+	Purpose: To Use IF statement to create a program for Paycheck with triple time
 */
 </script>
 <!doctype html>
