--- a/Hmwrk/Assignment 2/Switch Triple Time.html
+++ b/Hmwrk/Assignment 2/Switch Triple Time.html
@@ -15,23 +15,27 @@
 	<script>
     	var hours = parseInt(Math.random()*20+30); //hours worked
         var payRate = 10; //Dollars per hour
-        var ovt = 40; //Overtime Start
-		
+        var ovt = 20; //Overtime Start
+		var trit = 40;//Triple Time Start
 		
 		//Ourput the inputs!
 		document.write("<h2>Hours worked    = "+hours+"<h2>");
 		document.write("<h2> Pay Rate       = $" +payRate+" per hour</h2>");
 		document.write("<h3>Over time start = "+ovt+" hours</h3>");
-		
+		document.write("<h4>Triple time start="+trit+" hours</h4>");
 		
 		//Determine our paycheck
 		switch(hours<ovt){
 			case true:{
 				var payChk=hours*payRate;break;
 				//Calculates Overtime
-			}
-			default:{
+			} (hours>ovt&&hours<trit)
+			case true:{
 				var payChk=hours*payRate+(hours-ovt)*payRate;break;
+			}
+			//Calculates TRIPLE TIME
+			default:{
+				var payChk=hours*payRate+(hours-ovt)*payRate+(hours-ovt)*payRate;
 			}
 		}
 		
