--- a/Hmwrk/Assignment 2/Switch Triple Time.html
+++ b/Hmwrk/Assignment 2/Switch Triple Time.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 /*	Author: Aaron C Salcido
 	September 16th,2014
-	Purpose: To create a Triple Time paycheck using the Switch Operator
+	Purpose: To create a Triple Time paycheck calculator using the Switch Operator
 */
 </script>
 <!doctype html>
