Signed-off-by: reevo17 <runt17@gmail.com>

--- a/In-Class/Paycheck.html
+++ b/In-Class/Paycheck.html
@@ -15,6 +15,7 @@
 	<script>
     	var hours = parseInt(Math.random()*50+10); //hours worked
         var payRate = 10; //Dollars per hour
+		var stt = 20; //Straight Time
         var ovt = 40; //Overtime Start
 		
 		
