Signed-off-by: reevo17 <runt17@gmail.com>

--- a/In-Class/Paycheck.html
+++ b/In-Class/Paycheck.html
@@ -17,6 +17,7 @@
         var payRate = 10; //Dollars per hour
 		var stt = 20; //Straight Time
         var ovt = 40; //Overtime Start
+		var tax = 20;//Rate in %
 		
 		
 		//Ourput the inputs!
