Signed-off-by: reevo17 <runt17@gmail.com>

--- a/In-Class/RetirementStringWhileLoop.html
+++ b/In-Class/RetirementStringWhileLoop.html
@@ -35,6 +35,7 @@
 		
 		var balance = 100; //Unit = $'s
 		var intRate = 5;   //Unit = % rate per annual
+		var deposit=500;   //Unit = $'s
 		var str="";
 		//Output initial conditions
 		document.write("<p>Initial Blance = $"+balance+"</p>");
