Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Array Paycheck Table Assignment 4.html
+++ b/Hmwrk/Array Paycheck Table Assignment 4.html
@@ -77,12 +77,13 @@
 						}
 			//TABLE ROW 
 			str+=("<tr>") ;
-			str+=("<td>" +hour+ "</td>");			
-			str+=("<td>" +pay[0]+ "</td>");
+			str+=("<td>" + hour + "</td>");			
+			str+=("<td>" + pay[0] + "</td>");
 			pay[2]=pay[2].toFixed(2);
-			str+=("<td>" +pay[2]+ "</td>");
+			str+=("<td>" + pay[2] + "</td>");
 			
-			str+=("<td>" + tax+"</td>");
+			str+=("<td>" + tax + "</td>");
+			str+=("<td>" + netpay + "</td>");
 			str+=("</tr>") ;
 			
 			
