--- a/Hmwrk/Array Paycheck Table Assignment 4.html
+++ b/Hmwrk/Array Paycheck Table Assignment 4.html
@@ -38,7 +38,7 @@
 <script type="text/javascript">
 		//Set up savings table
 		var ovt  = 20; //OVERTIME
-		var dbt  = 40; //DOUBLE TIME
+		var dbt  = 40; //TRIPLE TIME
 		
 		
 		var str=" ";       //STORES THE DOCUMENT.WRITE
@@ -51,11 +51,10 @@
 		pay[0]      = 10;       //AMOUNT PER HOUR
 		pay[1]      = pay[0]*hour; //GROSS PAY
 		pay[2]      = pay[0]/hour; 
-		var tax     = 0.1*pay[0];//UNITS IN %
 		netpay[0]   = pay[0]-tax;
+		var tax     = 0.1*pay[0];//UNITS IN %
 		
-		
-		
+
 		
 		
 		//Output initial conditions
@@ -69,11 +68,11 @@
 		//Generate a table
 		for(var hour = 1; hour <73; hour++){
 			if(hour<ovt){
-				pay[0]=pay[0]*hour;
+				pay[0]=pay[0]*hour;      //GIVES STRAIGHT TIME
 			}else if (hour>ovt&&hour<dbt){
-				pay[0]=2*pay[0]*hour;	
+				pay[0]=2*pay[0]*hour;	//GIVES DOUBLE TIME
 			}else{
-				pay[0]=3*pay[0]*hour;
+				pay[0]=3*pay[0]*hour;   //GIVE TRIPLE TIME
 						}
 			//TABLE ROW 
 			str+=("<tr>") ;
