Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/ASSIGNMENT 4 5 Col Table.html
+++ b/Hmwrk/ASSIGNMENT 4 5 Col Table.html
@@ -26,7 +26,7 @@
         <tr>
         	<th style="font-family: Verdana">Hours</th>
             <th style="font-family: Verdana">Gross Pay</th>
-            <th style="font-family: Verdana">Pay Rate$/hour</th>
+            <th style="font-family: Verdana">Pay Rate $'s/hour</th>
             <th style="font-family: Verdana">Taxes at 10%</th>
             <th style="font-family: Verdana">Net Pay $'s</th>
          </tr>
