Added proper parallel array definition Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
+++ b/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
@@ -41,14 +41,14 @@
 		var tri  = 30; //UNITS Hours, Triple Time
 		var str=" ";   //Stores output, used as String
 		
-		var pay = new Array([]);
+		var pay = new Array([pay[0][0], pay[0][0]]);
 		//pay[0][i] = payrate
 		//pay[1][i] = netpay
 		var gross   = [];
 		var taxes = [];
 		var hours = [];
 		pay[0][0] = [];
-		pay[1][0] = "";
+		pay[1][0] = [];
 		
 		//Filling Arrays
 		for(var h = 0; h <= 72; h ++){
