Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
+++ b/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
@@ -1,7 +1,7 @@
 <script type="text/java">
 	/*
 		Author: Aaron C Salcido
-		September 26th, 2014
+		October 1st, 2014
 		Purpose: Assignement 5.0
 				Using 2D arrays to create a table that calculates Hours, Gross Pay, $/hour, Net Pay.
 				 
@@ -19,10 +19,10 @@
 <script type="text/javascript">
 		//Setting up savings table
 		
-		var reg = 10;	//10 dollars per hour straight time
+		var reg  = 10;	//10 dollars per hour straight time
 		var dbt  = 20; //Doubletime
 		var tri  = 30; //Triple time
-		var str=" ";  //Stores output
+		var str	 =" ";  //Stores output
 		
 		//Output initial conditions
 		
