Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
+++ b/Hmwrk/Assignment 5/ASSIGNMENT 5 Array Table 2.html
@@ -27,12 +27,12 @@
 		//Output initial conditions
 		
 		document.write("<p>Dollars Per Hour Straight Time =  $"+10+"</p>");
-		document.write("<p>Double Time Start =  "+20+" hours</p>");
+		document.write("<p>Double Time Start =   "+20+" hours</p>");
 		document.write("<p>Triple Time Start  =  "+40+" hours</p>");
 		
 	</script>
 
-<table border="1">
+<table border="1" align="center">
         
         	<tr>
             <th style="font-family: Verdana ;font-size:20px"  colspan="5">Pay Check Table</th>
