Pushed changes made in class Signed-off-by: reevo17 <runt17@gmail.com>

--- a/In-Class/Form.html
+++ b/In-Class/Form.html
@@ -18,6 +18,7 @@
 <form action="getForm.html" method="get">
 	<input name="Name" type="text" />Name<br>
 	<input name="Date" type="text" />Date<br>		    <input name"Age" type="text" />Age<br>
+    <input name="Submit" type="Submit" /><br>
 </form>
 
 </body>
