Editted Form Page Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 6/FormPage.html
+++ b/Hmwrk/Assignment 6/FormPage.html
@@ -16,13 +16,23 @@
 </head>
 
 <body>
-	<h1></h1>
-    
-    <form action="FormTable.html" method="get">
-    	<input name="principle" type="text" value=""></input>
-        <label>Hours Worked (Number Only)</label>
-        <br>
-        <input name="Submit" type="submit" value="Submit Time"></input>
+
+	    <h1></h1>
+ <!--GET:	HOURS WORKED
+ 			DOUBLE TIME START
+            TRIPLE TIME START
+            TAXES -->
+            
+    <form action="FormPage.html" method="get">
+    	<input name="Hours" type="text" value=""></input>
+        <label>Hours Worked (Number Only)</label><br>
+        <input name="Double Time Start" type="text" value=""></input>
+        <label>Hours that Double Time Starts </label><br>
+		<input name="Triple Time Start" type="text" value=""></input>
+        <label>Hours that Triple Time Starts</label><br>
+        <input name="Taxes%" type="text" value=""></input>
+        <label>% Tax</label><br>
+        <input name="Submit" type="submit" value="Submit Information"></input>
         </form>
 </body>
 </html>
