Added Script File and Table Page Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 6/FormPage.html
+++ b/Hmwrk/Assignment 6/FormPage.html
@@ -23,7 +23,7 @@
             TRIPLE TIME START
             TAXES -->
             
-    <form action="FormPage.html" method="get">
+    <form action="TablePage.html" method="get">
     	<input name="Hours" type="text" value=""></input>
         <label>Hours Worked (Number Only)</label><br>
         <input name="Double Time Start" type="text" value=""></input>
