Added 2D Array Table Code Signed-off-by: reevo17 <runt17@gmail.com>

--- a/Hmwrk/Assignment 6/TablePage.html
+++ b/Hmwrk/Assignment 6/TablePage.html
@@ -40,7 +40,7 @@
          
          var row  = 73;
          var col  = 5;
-         var str2	 ;
+         var str2 = " " ;
          var fill = 0;
          
          //Declare two-dimensional array
