--- a/Hmwrk/Assignment 6/TablePage.html
+++ b/Hmwrk/Assignment 6/TablePage.html
@@ -24,6 +24,34 @@
          
         
 <script type="text/javascript">
+//RETREIVE INFORMATION FROM FORM
+function getFormInfo(){
+    var obj=new Object();
+    var url=location.href;
+    var argumentList=url.split('?');
+    var nameValuePairs=argumentList[1].split('&');
+    for(var i=0;i<nameValuePairs.length-1;i++){
+            var map=nameValuePairs[i].split('=');
+			var property=map[0];
+			var value=map[1];
+		obj[property]=value;
+    }
+    return obj;
+}
+function putFormInfo(obj,pageOn,pageTo){
+    var url=location.href;
+    var page=url.split('?');
+    var sendto=page[0].replace(pageOn,pageTo);
+    sendto+="?";
+    for(var i in obj){
+        document.write(i+"="+obj[i]+"</br>");
+	sendto+=(i+"="+obj[i]+"&");
+    }
+    sendto+="Submit=Submit+Query";
+    return sendto;
+}
+
+
 		//Define Variables
 		
 		var reg =  10; //UNITS Hours, Straight Time
